Second template done.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
       "@hooks/*": ["hooks/*"],
       "@i18n/*": ["i18n/*"],
       "@navigation/*": ["navigation/*"],
+      "@query/*": ["query/*"],
       "@screens/*": ["screens/*"],
-      "@store/*": ["store/*"],
       "@theme/*": ["theme/*"],
       "@types/*": ["types/*"],
       "@utils/*": ["utils/*"],
