--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@tanstack/react-query": "^5.72.1",
+    "axios": "^1.8.4",
     "@reduxjs/toolkit": "^2.6.1",
     "i18next": "^24.2.3",
+    "immer": "^10.1.1",
     "react": "19.0.0",
     "react-i18next": "^15.4.1",
     "react-native": "0.79.0",
@@ -35,8 +38,7 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
-    "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
